--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   box2d_flame:
+  spritewidget:
+  flutter_shapes:
 
 dev_dependencies:
   flutter_test:
